# PuduRenderer

./: .gitignore  App.vcxproj  App.vcxproj.filters  CMakeLists.txt  Notes.txt  PuduCore.vcxproj  PuduCore.vcxproj.filters  PuduRenderer.sln  README.md  RenderEntity.cpp  WindowApp.h  _CreateProject.bat  createProject.bat  fastgltf.vcxproj  fmt.vcxproj  fmt.vcxproj.filters  imgui.ini  premake5.lua  simdjson.vcxproj  simdjson.vcxproj.filters
Assets/FrameGraphs/: Standard.sg
Assets/Models/: axis.gltf  cube.blend  cube.blend1  skybox.gltf  sphere.glb  sphere.gltf
Assets/Models/Demo/: Demo.blend
Assets/Models/Diorama_Cat/: CatDiorama.gltf  CatDiorama_Grass.xyz  cat.gltf
Assets/Models/chocobo/: Chocobo.mtl
Assets/Models/gameboy/: gameboy.blend  gameboy.blend1  gameboy.gltf
Assets/Shaders/: Depth.shader.slang  PuduGraphics.slang  PuduGraphicsModule.slang  Skybox.shader.slang  _compile.bat  compileShaders.bat  compileShaders.ps1  compileShaders_HLSL.bat  cubemap.frag.slang  grass.shader.slang  grass.vert.slang  normals.slang  overlay.slang  postprocessing.shader.slang  postprocessing.vert.slang  quadOverlay.shader.slang  quadTextureArrayOverlay.shader.slang  standard.shader.slang  standardSurface.shader.slang  testCompute.compute.slang  transparent.slang  triangle.frag  triangle.shader.slang  triangle.vert  triangle.vert.slang  water.shader.slang
Assets/Shaders/Compiled/: Depth.shader.slang.spv  Depth.vert.slang.spv  cubemap.frag.slang.spv  grass.frag.slang.spv  grass.shader.slang.spv  grass.vert.slang.spv  postprocessing.shader.slang.spv  postprocessing.vert.slang.spv  testCompute.compute.slang.spv  triangle.frag.spv  triangle.shader.slang.spv  triangle.vert.slang.spv  triangle.vert.spv
Assets/Shaders/Compute/: Test.compute.slang  horizonMapToCubemap.compute.slang
Assets/Shaders/Lib/: DefaultVertexInput.hlsl  Lighting.hlsl  LightingModule.slang  PuduCoreModule.slang  Shadowmap.slang  grass.slang
Projects/App/Lib/: PuduApp.h  TriangleApp.h
Projects/App/Src/: PuduApp.cpp  TriangleApp.cpp  main.cpp
Projects/CatDiorama/Lib/: CatDiorama.h
Projects/CatDiorama/Src/: CatDiorama.cpp  main.cpp
Projects/PuduCore/Src/: Camera.cpp  ComputeShader.cpp  ComputeShaderRenderer.cpp  DescriptorSetLayoutCollection.cpp  DrawCall.cpp  DrawIndirectRenderPass.cpp  Entity.cpp  EntityManager.cpp  FileManager.cpp  FileManager.h  GPUCommands.cpp  GPUResourcesManager.cpp  GpuDevice.cpp  GraphicsBuffer.cpp  IDescriptorProvider.cpp  Material.cpp  MaterialCreationData.cpp  MemoryAllocation.cpp  Mesh.cpp  MeshCreationData.cpp  MeshManager.cpp  PipelineCreationData.cpp  Projection.cpp  PuduApp.cpp  PuduGraphics.cpp  PuduRenderer.cpp  RenderEntity.cpp  RenderEntityManager.cpp  Renderer.cpp  ResourceLayoutManager.cpp  ResourceUpdate.cpp  SPIRVParser.cpp  Scene.cpp  Semaphore.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderCursor.cpp  ShaderManager.cpp  ShaderObject.cpp  Texture.cpp  (+6 more)
Projects/PuduCore/Src/Enums/: ResourceUsage.h
Projects/PuduCore/Src/FrameGraph/: DepthStencilRenderPass.cpp  ForwardRenderPass.cpp  FrameGraph.cpp  FrameGraphRenderPass.cpp  PostProcessingRenderPass.cpp  RenderPass.cpp  ShadowMapRenderPass.cpp
Projects/PuduCore/Src/Lighting/: Light.cpp
Projects/PuduCore/Src/Resources/: CommandPool.cpp  DescriptorPool.cpp  FrameBufferCreationData.cpp  RenderPass.cpp  RenderPassCreationData.cpp  Resources.cpp  ResourcesAllocator.cpp  ResourcesManager.cpp
Projects/PuduCore/Src/ShaderCompilation/: DescriptorsBuilder.cpp  ShaderCompilationObject.cpp  ShaderCompiler.cpp  ShaderLayout.cpp  ShaderObjectLayoutBuilder.cpp
Projects/PuduCore/Src/ShaderCursor/: ShaderCursor.cpp
Projects/PuduCore/lib/: AntialiasingSettings.h  Camera.h  Color.h  ComputeShader.h  ComputeShaderRenderer.h  Concepts.h  DescriptorSetLayoutCollection.h  DescriptorSetLayoutData.h  DescriptorSetLayoutInfo.h  DrawCall.h  DrawIndirectRenderPass.h  Entity.h  EntityManager.h  FileManager.h  Frame.h  GPUCommands.h  GPUEnums.h  GPUResourcesManager.h  GpuDevice.h  GraphicsBuffer.h  IDescriptorProvider.h  ImGuiUtils.h  Logger.h  Material.h  MaterialCreationData.h  MemoryAllocation.h  Mesh.h  MeshCreationData.h  MeshData.h  MeshManager.h  Model.h  Paths.h  PhysicalDeviceCreationData.h  Pipeline.h  PipelineCreationData.cpp  PipelineCreationData.h  Projection.h  PuduApp.h  PuduConstants.h  PuduCore.h  (+37 more)
Projects/PuduCore/lib/Enums/: ResourceUsage.h
Projects/PuduCore/lib/FrameGraph/: DepthStencilRenderPass.h  ForwardRenderPass.h  FrameGraph.h  FrameGraphRenderPass.h  PostProcessingRenderPass.h  RenderPass.h  ShadowMapRenderPass.h
Projects/PuduCore/lib/ImGui/: imgui_impl_vulkan.cpp
Projects/PuduCore/lib/Lighting/: Light.h  LightBuffer.h
Projects/PuduCore/lib/Resources/: CommandPool.h  ConstantBufferInfo.h  DescriptorPool.h  FrameBufferCreationData.h  GPUResource.h  RenderPass.h  RenderPassCreationData.h  Resources.h  (+4 more)
Projects/PuduRenderer/lib/: BlitRenderPass.h  ComputeRenderPass.h  DepthStencilRenderPass.h  DrawIndirectRenderPass.h  GlobalConstants.h  ImguiRenderPass.h  OverlayQuadEntity.h  PostProcessingRenderPass.h  PuduRenderer.h  ShadowMapRenderPass.h
Projects/PuduRenderer/src/: BlitRenderPass.cpp  ComputeRenderPass.cpp  DepthStencilRenderPass.cpp  DrawIndirectRenderPass.cpp  ForwardRenderPass.cpp  ImguiRenderPass.cpp  OverlayQuadEntity.cpp  PostProcessingRenderPass.cpp  PuduRenderer.cpp  ShadowMapRenderPass.cpp
Projects/Test_PBR/Lib/: Test_PBR.h
Projects/Test_PBR/Src/: Test_PBR.cpp  main.cpp
lib/: .gitignore
lib/SPIRV_Reflect/Debug/: SPIRV-Reflect.lib
lib/SPIRV_Reflect/Release/: SPIRV-Reflect.lib
lib/fastgltf/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fastgltf.sln  fastgltf.vcxproj  fastgltf.vcxproj.filters  fastgltf_simdjson.vcxproj  fastgltf_simdjson.vcxproj.filters
lib/fastgltf/Debug/: fastgltf.idb
lib/fmt/Debug/: fmt.idb  fmtd.lib
lib/fmt/Release/: fmt.lib
lib/simdjson/Debug/: simdjson.idb  simdjson.lib
lib/simdjson/Release/: simdjson.lib
(+60 files in other folders)
